--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,3 +1,95 @@
 .header {
-    color: black;
+    display: flex;
+    flex-direction: row;
+    position: sticky;
+    padding: 20px 40px 20px 40px;
+    @media screen and (max-width: 750px) {
+        flex-direction: column;
+        align-items: center;
+    text-align: center;
+    }
+
+
+    &__navbar {
+        display: flex;
+        flex-direction: row;
+        gap: 45px;
+        font-size: 20px;
+        color: #000000;
+        font-weight: 400;
+        list-style-type: none;
+        padding: 0;
+        margin: 25px;
+
+        @media screen and (max-width: 750px) {
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        & > li > a {
+            color: inherit;
+            text-decoration: none;
+            cursor: pointer;
+            position: relative;
+            transition: 0.3s ease;
+
+            &:hover {
+                &:before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    height: 2px;
+                    background-color: #66bb37;
+                    transition: height 0.3s ease, opacity 0.3s ease;
+                    opacity: 1;
+                }
+            }
+               &:before {
+                content: '';
+                position: absolute;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                height: 0;
+                background-color:#7AC943;
+                transition: height 0.3s ease, opacity 0.3s ease;
+                opacity: 0;
+            }
+          }
+    }
+
+    &__icons {
+        display: flex;
+        align-self: center;
+        justify-content: center;
+        margin-left: auto;
+        gap:10px;
+
+        @media screen and (max-width: 750px) {
+            margin-left: 0;
+        }
+    }
+    &__buttons {
+        display: flex;
+        align-self: center;
+        justify-content: center;
+        margin-left: 30px;
+
+        @media screen and (max-width: 750px) {
+            margin-left: 0;
+            margin-top: 20px;
+        }
+
+        & > button  {
+            background: none;
+            border: none;
+            font-size: 20px;
+            color: #000000;
+            font-weight: 400;
+            opacity: 0.5;
+        }
+
+    }
 }
