--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,12 +1,17 @@
 .header {
     display: flex;
     flex-direction: row;
-    position: sticky;
-    padding: 20px 40px 20px 40px;
-    @media screen and (max-width: 750px) {
+    position: fixed;
+    top: 0;
+    background-color: white;
+    width: 100vw;
+    padding: 20px 40px;
+    box-sizing: border-box;
+    @media screen and (max-width: 1075px) {
         flex-direction: column;
         align-items: center;
-    text-align: center;
+        text-align: center;
+        position:relative;
     }
 
 
@@ -21,7 +26,7 @@
         padding: 0;
         margin: 25px;
 
-        @media screen and (max-width: 750px) {
+        @media screen and (max-width: 1075px) {
             flex-direction: column;
             gap: 20px;
         }
@@ -67,7 +72,7 @@
         margin-left: auto;
         gap:10px;
 
-        @media screen and (max-width: 750px) {
+        @media screen and (max-width: 1075px) {
             margin-left: 0;
         }
     }
@@ -77,7 +82,7 @@
         justify-content: center;
         margin-left: 30px;
 
-        @media screen and (max-width: 750px) {
+        @media screen and (max-width: 1075px) {
             margin-left: 0;
             margin-top: 20px;
         }
