--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   src: url("../fonts/Montserrat-Regular.ttf");
   font-weight: normal;
   font-style: normal;
@@ -13,7 +13,7 @@ $black: #262626;
 
 // text styles
 %header__navbar-font {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: $black;
   font-size: 20px;
   font-style: normal;
@@ -25,7 +25,7 @@ $black: #262626;
 }
 
 %heading-font {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: $black;
   font-size: 42px;
   font-style: normal;
@@ -34,7 +34,7 @@ $black: #262626;
 }
 
 %subtitle-font {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: $black;
   font-size: 24px;
   line-height: 1.35;
@@ -43,7 +43,7 @@ $black: #262626;
 }
 
 %text-font {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: $black;
   font-size: 14px;
   line-height: 1.55;
@@ -52,7 +52,7 @@ $black: #262626;
 }
 
 %button-font {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: $white;
   font-size: 14px;
   line-height: 1.55;
@@ -64,5 +64,5 @@ $black: #262626;
 .body {
   min-width: 320px;
   max-width: 1440px;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
 }
