add links to social nets and hover effect on buttons

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -97,11 +97,15 @@
 
         & > button  {
             background: none;
-            border: none;
+            border: solid 2px white;
             font-size: 20px;
             color: #000000;
             font-weight: 400;
             opacity: 0.5;
+            cursor: pointer;
+            &:hover {
+                border: solid 2px #7AC943;
+            }
         }
 
     }
