--- a/src/app/services/style.module.scss
+++ b/src/app/services/style.module.scss
@@ -1,5 +1,60 @@
 .services {
-    background-color: black;
-    color: aliceblue;
+
+    &__heading {
+        color: black;
+        text-align: center;
+        font-size: 42px;
+        font-weight: 600;
+    }
+
+    &__sectionOne {
+        display: flex;
+        flex-direction: row;
+        gap: 50px;
+    }
+
+    &__sectionTwo {
+        display: flex;
+        flex-direction: row;
+        & > ul > li {
+            color: rgb(51, 51, 51);
+            font-size: 20px;
+            font-weight: 300;
+        }
+    }
 
 }
+
+.services {
+    form {
+      display: flex;
+      flex-direction: column;
+      max-width: 400px;
+      margin: auto;
+    }
+
+    input,
+    textarea {
+      border: none;
+      border-bottom: 2px solid #ccc;
+      margin-bottom: 20px;
+      padding: 10px;
+      outline: none;
+    }
+
+    button[type="submit"] {
+      background-color:  #7ac943;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      outline: none;
+      transition: background-color 0.3s ease;
+    }
+  
+    button[type="submit"]:hover {
+      background-color:  #262626;
+    }
+  }
+  
