--- a/src/app/services/style.module.scss
+++ b/src/app/services/style.module.scss
@@ -10,44 +10,67 @@
     &__sectionOne {
         display: flex;
         flex-direction: row;
-        gap: 50px;
-    }
+        gap: 150px;
 
-    &__sectionTwo {
-        display: flex;
-        flex-direction: row;
-        & > ul > li {
-            color: rgb(51, 51, 51);
-            font-size: 20px;
-            font-weight: 300;
+        @media screen and (max-width: 1075px) {
+          flex-direction: column;
+          align-items: center;
+          gap: 40px;
         }
     }
 
-}
+    &__sectionTwo {
+        height: 45vw;
+        width: 117%;
+        padding-top: 62px;
+        padding-left: 30px;
+        background-image: url('/images/Services/treefull.webp');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-position: bottom 0px right 0px;
+        font-family: 'Montserrat';
+        font-size: 18px;
+        & > ul > li {
+          padding-top: 0;
+          color: rgb(51, 51, 51);
+          font-size: 20px;
+          font-weight: 300;
+          margin-top: 15px;
+        }
+        }
 
-.services {
     form {
       display: flex;
       flex-direction: column;
-      max-width: 400px;
       margin: auto;
     }
 
     input,
     textarea {
+      width: 70%;
+      font-family: 'Montserrat';
+      color: #262626;
+      font-size: 16px;
       border: none;
-      border-bottom: 2px solid #ccc;
+      border-bottom: 1px solid #b3b3b3;
       margin-bottom: 20px;
       padding: 10px;
       outline: none;
+
+      &:focus {
+        border-color: #50c417;
+      }
     }
 
     button[type="submit"] {
-      background-color:  #7ac943;
+      background-color:  #50c417;
       color: white;
-      padding: 10px 20px;
+      font-family: 'Montserrat';
+      font-size: 16px;
+      padding: 20px 60px;
+      max-width: 200px;
       border: none;
-      border-radius: 10px;
+      border-radius: 30px;
       cursor: pointer;
       outline: none;
       transition: background-color 0.3s ease;
@@ -56,5 +79,10 @@
     button[type="submit"]:hover {
       background-color:  #262626;
     }
-  }
-  
+
+    span {
+      width: 70%;
+      margin-top: 20px;
+    }
+
+}
