--- a/src/components/ArticlePractice/style.module.scss
+++ b/src/components/ArticlePractice/style.module.scss
@@ -2,7 +2,7 @@
 
 .practice__section-image {
   height: auto;
-  width: 80%;
+  width: 100%;
 }
 .practice__article {
   display: flex;
@@ -12,7 +12,7 @@
   gap: 1.5vw;
 }
 .practice__info {
-  max-width: 80%;
+  max-width: 100%;
 }
 .practice__title {
   color: $black;
@@ -32,7 +32,7 @@
     align-items: center;
     gap: 1.5vw;
     max-width: 640px;
-    padding: 0 45px;
+    padding: 0;
   }
   .practice__section-image {
     height: auto;
@@ -42,6 +42,7 @@
     max-width: 100%;
   }
   .practice__title {
-    padding-bottom: 28px;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
   }
 }
