--- a/src/app/services/style.module.scss
+++ b/src/app/services/style.module.scss
@@ -1,7 +1,9 @@
+@import '../globals.scss';
+
 .services {
 
     &__heading {
-        color: black;
+        color: $black;
         text-align: center;
         font-size: 42px;
         font-weight: 600;
@@ -49,7 +51,7 @@
     textarea {
       width: 70%;
       font-family: 'Montserrat';
-      color: #262626;
+      color: $black;
       font-size: 16px;
       border: none;
       border-bottom: 1px solid #b3b3b3;
@@ -58,13 +60,13 @@
       outline: none;
 
       &:focus {
-        border-color: #50c417;
+        border-color: $green;
       }
     }
 
     button[type="submit"] {
-      background-color:  #50c417;
-      color: white;
+      background-color: $green;
+      color: $white;
       font-family: 'Montserrat';
       font-size: 16px;
       padding: 20px 60px;
@@ -77,7 +79,7 @@
     }
   
     button[type="submit"]:hover {
-      background-color:  #262626;
+      background-color: $black;
     }
 
     span {
