--- a/src/app/services/style.module.scss
+++ b/src/app/services/style.module.scss
@@ -7,6 +7,10 @@
         text-align: center;
         font-size: 42px;
         font-weight: 600;
+
+        @media screen and (max-width: 756px) {
+          font-size: 32px;
+        }
     }
 
     &__sectionOne {
@@ -27,6 +31,7 @@
         padding-top: 62px;
         padding-left: 30px;
         background-image: url('/images/Services/treefull.webp');
+        overflow: scroll;
         background-repeat: no-repeat;
         background-size: 100% 100%;
         background-position: bottom 0px right 0px;
@@ -38,6 +43,18 @@
           font-size: 20px;
           font-weight: 300;
           margin-top: 15px;
+          @media screen and (max-width: 756px) {
+           font-size: 14px;
+           margin-top: 5px;
+          }
+
+        }
+
+        @media screen and (max-width: 756px) {
+          padding: 20px;
+          font-size: 14px;
+          height: 58vw;
+          width: 143%;
         }
         }
 
@@ -45,6 +62,10 @@
       display: flex;
       flex-direction: column;
       margin: auto;
+
+      @media screen and (max-width: 756px) {
+        padding: 20px;
+      }
     }
 
     input,
