--- a/src/components/ArticleBlog/style.module.scss
+++ b/src/components/ArticleBlog/style.module.scss
@@ -14,6 +14,10 @@
 .blog__info {
   max-width: 50%;
 }
+.blog__time {
+  color: $black;
+  opacity: 70%;
+}
 .blog__title {
   color: $black;
   font-size: 30px;
@@ -21,7 +25,7 @@
   font-style: normal;
   font-weight: 600;
   margin: 2px;
-  padding-bottom: 2vw;
+  padding-bottom: 1vw;
 }
 .blog__text {
   white-space: pre-line;
