--- a/src/components/BlogPage/style.module.scss
+++ b/src/components/BlogPage/style.module.scss
@@ -9,6 +9,15 @@
 }
 .pagination__button {
   border: none;
-
   background-color: $white;
+  &:hover {
+    opacity: 20%;
+  }
+}
+
+.pagination__text {
+  font-weight: 300;
+  color: $black;
+  line-height: 1.75;
+  font-size: 18px;
 }
