--- a/src/app/blog/style.module.scss
+++ b/src/app/blog/style.module.scss
@@ -1,7 +1,6 @@
 @import '../globals.scss';
 
 .blog {
-  padding-top: 80px;
   max-width: 100%;
   margin: 0 auto;
   display: flex;
@@ -10,7 +9,8 @@
   align-items: center;
   gap: 10vh;
   color: $black;
-  width: 100vw;
+  width: 100%;
+  padding-top: 80px;
 }
 .heading {
   font-family: 'Montserrat', sans-serif;
