--- a/src/app/about/style.module.scss
+++ b/src/app/about/style.module.scss
@@ -28,17 +28,20 @@
 
     &__sectitle{
         margin-top: 20px;
-        margin-bottom: 100px;
     }
 
     &__cards{
-
+        width: 87%;
         &_cardCont{
             display: flex;
             justify-content: space-around;
             align-items: center;
-            height: 100%;
             width: 100%;
+            margin-top: 100px;
+
+            @media screen and (max-width: 1075px) {
+                display: grid;
+            }
         }
 
         &_title{
@@ -66,6 +69,31 @@
             padding: 0 30px;
             border-radius: 30px;
             cursor: pointer;
+
+            & > a{
+                color: inherit;
+                text-decoration: none;
+            }
+        }
+
+        &_email{
+            border: none;
+            border-bottom: 1px #a5a5a5 solid;
+            padding-bottom: 10px;
+            margin-right: 20px;
+
+            &:active, &:hover, &:focus {
+                outline: 0;
+                outline-offset: 0;
+            }
+        }
+
+        &_img{
+            @media screen and (max-width: 1075px) {
+                display: grid;
+                grid-row: 1/2;
+                margin-bottom: 30px;
+            }
         }
     }
 }
