--- a/src/app/about/style.module.scss
+++ b/src/app/about/style.module.scss
@@ -69,10 +69,15 @@
             padding: 0 30px;
             border-radius: 30px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
 
             & > a{
                 color: inherit;
                 text-decoration: none;
+            }
+
+            &:hover{
+                background-color: #262626;
             }
         }
 
@@ -81,6 +86,7 @@
             border-bottom: 1px #a5a5a5 solid;
             padding-bottom: 10px;
             margin-right: 20px;
+            width: 240px;
 
             &:active, &:hover, &:focus {
                 outline: 0;
