изменен размер 2 изображения для мобильной версии

--- a/src/app/mainlist/style.module.scss
+++ b/src/app/mainlist/style.module.scss
@@ -78,7 +78,8 @@
     object-fit: cover;
 
     @media screen and (max-width: 960px) {
-      width: 70%;
+      width: 100%;
+      margin-inline-start: 0;
     }
   }
 }
