--- a/src/app/services/style.module.scss
+++ b/src/app/services/style.module.scss
@@ -18,6 +18,7 @@
     gap: 150px;
     overflow: hidden;
     text-align: center;
+    margin-bottom: 30px;
 
     @media screen and (max-width: 1075px) {
       flex-direction: column;
@@ -27,17 +28,16 @@
   }
 
   &__sectionTwo {
-    height: 45vw;
-    width: 117%;
+    min-height: 420px;
     max-width: 100vw;
-    max-height: 48vh;
+    max-height: 80vh;
     padding-top: 62px;
     padding-left: 90px;
     background-image: url("/images/Services/treefull.webp");
     overflow: visible;
     background-repeat: no-repeat;
-    background-size: 100% 90%;
-    background-position: bottom 0px right 0px;
+    background-size: cover;
+    background-position: top;
     font-family: "Montserrat";
     font-size: 18px;
     & > ul > li {
@@ -53,13 +53,14 @@
     }
 
     @media screen and (max-width: 756px) {
+      height: 80vh;
       padding: 20px;
       font-size: 14px;
       height: 58vw;
-      width: 143%;
     }
 
     @media screen and (max-width: 476px) {
+      height: 80vh;
       background: none;
       background-color: $green;
       background-image: none;
