--- a/src/app/privacy-policy/style.module.scss
+++ b/src/app/privacy-policy/style.module.scss
@@ -1,15 +1,18 @@
+@import '../../app/globals.scss';
+
 .privacy {
 	width: 100%;
 
 	&__container {
+		font-family: 'Montserrat';
 		max-width: 1280px;
 		margin: 0 auto;
-		padding-block: 80px;
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: flex-start;
-		color: var(--color-text);
+		text-align: justify;
+		padding-bottom: 40px;
 
 		@media (max-width: 1439px) {
 			max-width: 80%;
@@ -27,54 +30,8 @@
 	}
 
 	&__title {
-		margin-bottom: 72px;
-
-		h2 {
-			font: var(--font-block-title);
-			color: var(--color-lilac);
-
-			@media (max-width: 600px) {
-				font-size: 32px;
-				margin-bottom: 6px;
-			}
-		}
-
-		h3 {
-			font: var(--font-title-description);
-		}
-	}
-
-	&__back-btn {
-		display: flex;
-		align-items: center;
-		gap: 5px;
-		padding: 8px 10px;
-		margin-bottom: 8px;
-		width: fit-content;
-		color: var(--color-text);
-		border-radius: 100px;
-		border: none;
-		background-color: rgba(255, 255, 255, 0.2);
-		backdrop-filter: blur(11px);
-		transition: all 0.2s ease-in-out;
-		font-family: Involve;
-		font-size: 11px;
-		font-weight: 400;
-		line-height: 130%;
-		letter-spacing: -0.33px;
-		text-decoration: none;
-
-		&:hover {
-			background-color: rgba(255, 255, 255, 0.4);
-		}
-
-		&:active {
-			background-color: rgba(255, 255, 255, 0.6);
-		}
-
-		@media (max-width: 833px) {
-			margin-bottom: 10px;
-		}
+		margin-bottom: 30px;
+		font-weight: 800;
 	}
 
 	&__content {
@@ -84,7 +41,6 @@
 
 		&_block {
 			h3 {
-				font: var(--font-title-description);
 				margin-bottom: 13px;
 
 				@media (max-width: 600px) {
@@ -93,7 +49,6 @@
 			}
 
 			p {
-				font: var(--font-description-main);
 				line-height: 131%;
 			}
 		}
