--- a/src/components/UpButton/style.module.scss
+++ b/src/components/UpButton/style.module.scss
@@ -1,3 +1,5 @@
+@import "../../app/globals.scss";
+
 .up-btn {
     display: none;
     opacity: 0;
@@ -11,10 +13,9 @@
       bottom: 110px;
       cursor: pointer;
       z-index: 999;
-      background-color: rgba(53, 42, 121, 0.4);
+      background-color: $green;
       backdrop-filter: blur(5px);
       border-radius: 100px;
-      border: 1px solid var(--color-bg-white);
       padding: 15px;
       width: 47px;
       height: 47px;
@@ -24,12 +25,7 @@
   
   
       &:hover {
-        background-color: rgba(53, 42, 121, 0.7);
-        cursor: pointer;
-      }
-  
-      &:active {
-        background-color: #352a79;
+        background-color: $yellow;
       }
   
       &:focus-visible {
