--- a/src/app/about/style.module.scss
+++ b/src/app/about/style.module.scss
@@ -1,106 +1,99 @@
-.about{
-    width: 100%;
-    display: grid;
-    justify-items: center;
-    gap: 20px;
+@import '../text-styles';
 
-    &__title,
-    &__sectitle{
-        font-size: 34px;
-        font-weight: 600;
+.about {
+  width: 100%;
+  display: grid;
+  justify-items: center;
+  gap: 20px;
+  margin-bottom: 50px;
 
-        &_description{
-            width: 560px;
-            font-size: 16px;
-            padding-bottom: 10px;
-            font-weight: 300;
-            text-align: center;
-            line-height: 1.55;
-        }
+  &__title,
+  &__sectitle {
+    @extend %heading-font;
 
-        &_content{
-            font-size: 18px;
-            font-weight: 300;
-            width: 560px;
-            text-align: center;
-            line-height: 1.55;
-        }
+    &_description {
+      width: 560px;
+      padding-bottom: 10px;
+      text-align: center;
+      @extend %text-medium-font;
     }
 
-    &__sectitle{
-        margin-top: 20px;
+    &_content {
+      width: 560px;
+      text-align: center;
+      @extend %text-medium-font;
+    }
+  }
+
+  &__sectitle {
+    margin-top: 20px;
+  }
+
+  &__cards {
+    width: 87%;
+    &_cardCont {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      width: 100%;
+      margin-top: 100px;
+
+      @media screen and (max-width: 1075px) {
+        display: grid;
+      }
     }
 
-    &__cards{
-        width: 87%;
-        &_cardCont{
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 100%;
-            margin-top: 100px;
-
-            @media screen and (max-width: 1075px) {
-                display: grid;
-            }
-        }
-
-        &_title{
-            font-size: 26px;
-            line-height: 1.23;
-            font-weight: 600;
-        }
-
-        &_text{
-            font-size: 18px;
-            line-height: 1.55;
-            margin: 30px 0;
-            width: 400px;
-        }
-
-        &_btn{
-            color: white;
-            font-size: 14px;
-            line-height: 1.55;
-            font-weight: 700;
-            text-align: center;
-            background-color: #41b619;
-            border: none;
-            height: 45px;
-            padding: 0 30px;
-            border-radius: 30px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-
-            & > a{
-                color: inherit;
-                text-decoration: none;
-            }
-
-            &:hover{
-                background-color: #262626;
-            }
-        }
-
-        &_email{
-            border: none;
-            border-bottom: 1px #a5a5a5 solid;
-            padding-bottom: 10px;
-            margin-right: 20px;
-            width: 240px;
-
-            &:active, &:hover, &:focus {
-                outline: 0;
-                outline-offset: 0;
-            }
-        }
-
-        &_img{
-            @media screen and (max-width: 1075px) {
-                display: grid;
-                grid-row: 1/2;
-                margin-bottom: 30px;
-            }
-        }
+    &_title {
+      @extend %subtitle-font;
     }
+
+    &_text {
+      margin: 30px 0;
+      width: 400px;
+      @extend %text-medium-font;
+    }
+
+    &_btn {
+      @extend %button-font;
+      background-color: #41b619;
+      border: none;
+      height: 45px;
+      padding: 0 30px;
+      border-radius: 30px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      & > a {
+        color: inherit;
+        text-decoration: none;
+      }
+
+      &:hover {
+        background-color: #262626;
+      }
+    }
+
+    &_email {
+      border: none;
+      border-bottom: 1px #a5a5a5 solid;
+      padding-bottom: 10px;
+      margin-right: 20px;
+      width: 240px;
+      @extend %text-font;
+      &:active,
+      &:hover,
+      &:focus {
+        outline: 0;
+        outline-offset: 0;
+      }
+    }
+
+    &_img {
+      @media screen and (max-width: 1075px) {
+        display: grid;
+        grid-row: 1/2;
+        margin-bottom: 30px;
+      }
+    }
+  }
 }
