--- a/src/app/privacy-policy/style.module.scss
+++ b/src/app/privacy-policy/style.module.scss
@@ -1,56 +1,55 @@
-@import '../../app/globals.scss';
-
+@import '../text-styles';
 .privacy {
-	width: 100%;
+  width: 100%;
 
-	&__container {
-		font-family: 'Montserrat';
-		max-width: 1280px;
-		margin: 0 auto;
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		align-items: flex-start;
-		text-align: justify;
-		padding-bottom: 40px;
+  &__container {
+    font-family: 'Montserrat';
+    max-width: 1280px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: justify;
+    padding-bottom: 40px;
 
-		@media (max-width: 1439px) {
-			max-width: 80%;
-		}
+    @media (max-width: 1439px) {
+      max-width: 80%;
+    }
 
-		@media (max-width: 1279px) {
-			max-width: 92%;
-			padding-block: 60px;
-		}
+    @media (max-width: 1279px) {
+      max-width: 92%;
+      padding-block: 60px;
+    }
 
-		@media (max-width: 833px) {
-			max-width: 82%;
-			padding-block: 40px;
-		}
-	}
+    @media (max-width: 833px) {
+      max-width: 82%;
+      padding-block: 40px;
+    }
+  }
 
-	&__title {
-		margin-bottom: 30px;
-		font-weight: 800;
-	}
+  &__title {
+    margin-bottom: 30px;
+    font-weight: 800;
+  }
 
-	&__content {
-		display: flex;
-		flex-direction: column;
-		gap: 30px;
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 
-		&_block {
-			h3 {
-				margin-bottom: 13px;
+    &_block {
+      h3 {
+        margin-bottom: 13px;
 
-				@media (max-width: 600px) {
-					margin-bottom: 14px;
-				}
-			}
+        @media (max-width: 600px) {
+          margin-bottom: 14px;
+        }
+      }
 
-			p {
-				line-height: 131%;
-			}
-		}
-	}
+      p {
+        line-height: 131%;
+      }
+    }
+  }
 }
