--- a/src/app/services/style.module.scss
+++ b/src/app/services/style.module.scss
@@ -1,15 +1,9 @@
-@import "../globals.scss";
+@import '../text-styles';
 
 .services {
   &__heading {
-    color: $black;
-    text-align: center;
-    font-size: 42px;
-    font-weight: 600;
-
-    @media screen and (max-width: 756px) {
-      font-size: 32px;
-    }
+    @extend %heading-font;
+    margin-bottom: 50px;
   }
 
   &__sectionOne {
@@ -33,21 +27,16 @@
     max-height: 80vh;
     padding-top: 62px;
     padding-left: 90px;
-    background-image: url("/images/Services/treefull.webp");
+    background-image: url('/images/Services/treefull.webp');
     overflow: visible;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
-    font-family: "Montserrat";
-    font-size: 18px;
+    @extend %text-medium-font;
     & > ul > li {
       padding-top: 0;
-      color: rgb(51, 51, 51);
-      font-size: 20px;
-      font-weight: 300;
       margin-top: 15px;
       @media screen and (max-width: 756px) {
-        font-size: 14px;
         margin-top: 5px;
       }
     }
@@ -55,14 +44,13 @@
     @media screen and (max-width: 756px) {
       height: 80vh;
       padding: 20px;
-      font-size: 14px;
       height: 58vw;
     }
 
     @media screen and (max-width: 476px) {
       height: 80vh;
       background: none;
-      background-color: $green;
+      background-color: var(--green);
       background-image: none;
     }
   }
@@ -80,28 +68,24 @@
   input,
   textarea {
     width: 70%;
-    font-family: "Montserrat";
-    color: $black;
-    font-size: 16px;
     border: none;
     border-bottom: 1px solid #b3b3b3;
     margin-bottom: 20px;
     padding: 10px;
     outline: none;
     resize: none;
-    
+
+    @extend %text-medium-font;
+
     &:focus {
-      border-color: $green;
+      border-color: var(--green);
     }
   }
 
-  button[type="submit"] {
+  button[type='submit'] {
     margin: auto;
     margin-bottom: 10px;
-    background-color: $green;
-    color: $white;
-    font-family: "Montserrat";
-    font-size: 16px;
+    background-color: var(--green);
     padding: 20px 60px;
     max-width: 200px;
     border: none;
@@ -109,10 +93,11 @@
     cursor: pointer;
     outline: none;
     transition: background-color 0.3s ease;
+    @extend %button-font;
   }
 
-  button[type="submit"]:hover {
-    background-color: $black;
+  button[type='submit']:hover {
+    background-color: var(--black);
   }
 
   span {
