--- a/src/components/DescriptionPractive/style.module.scss
+++ b/src/components/DescriptionPractive/style.module.scss
@@ -1,10 +1,8 @@
-@import '../../app/globals.scss';
+@import './../../../src/app/text-styles.scss';
+
 .practice__text {
-  font-weight: 300;
-  color: $black;
-  line-height: 1.75;
-  font-size: 18px;
-  text-indent: 25px;
+  @extend %text-font;
+  text-indent: 15px;
   word-wrap: break-word;
 }
 .practice__button {
@@ -16,7 +14,7 @@
 }
 .practice__button:hover {
   text-decoration: underline;
-  text-decoration-color: $green;
+  text-decoration-color: var(--green);
   transition: height 0.3s ease, opacity 0.3s ease;
 }
 .practice__common-text {
@@ -25,7 +23,6 @@
 @media (width< 640px) {
   .practice__text {
     line-height: 1.55;
-    font-size: 16px;
     margin: 0;
   }
 }
