--- a/src/components/Loader/style.scss
+++ b/src/components/Loader/style.scss
@@ -1,4 +1,3 @@
-@import './../../app/globals.scss';
 .cssload-dots {
   width: 0;
   height: 0;
@@ -8,7 +7,7 @@
   bottom: 0;
   right: 0;
   margin: auto;
-  outline: 1px solid $green;
+  outline: 1px solid var(--green);
   filter: url(#goo);
   -o-filter: url(#goo);
   -ms-filter: url(#goo);
@@ -28,7 +27,7 @@
   width: 34px;
   height: 34px;
   border-radius: 49px;
-  background: $green;
+  background: var(--green);
   position: absolute;
   left: 50%;
   transform: translateY(0);
@@ -77,7 +76,7 @@
   -moz-animation: cssload-dot-rotate-2 4.6s 1.15s linear infinite;
 }
 .cssload-dot:nth-child(2):before {
-  background-color: $yellow;
+  background-color: var(--yellow);
   animation: cssload-dot-move 4.6s 1.15s ease infinite;
   -o-animation: cssload-dot-move 4.6s 1.15s ease infinite;
   -ms-animation: cssload-dot-move 4.6s 1.15s ease infinite;
@@ -93,7 +92,7 @@
   -moz-animation: cssload-dot-rotate-3 4.6s 2.3s linear infinite;
 }
 .cssload-dot:nth-child(3):before {
-  background-color: $green;
+  background-color: var(--green);
   animation: cssload-dot-move 4.6s 2.3s ease infinite;
   -o-animation: cssload-dot-move 4.6s 2.3s ease infinite;
   -ms-animation: cssload-dot-move 4.6s 2.3s ease infinite;
@@ -109,7 +108,7 @@
   -moz-animation: cssload-dot-rotate-4 4.6s 3.45s linear infinite;
 }
 .cssload-dot:nth-child(4):before {
-  background-color: $yellow;
+  background-color: var(--yellow);
   animation: cssload-dot-move 4.6s 3.45s ease infinite;
   -o-animation: cssload-dot-move 4.6s 3.45s ease infinite;
   -ms-animation: cssload-dot-move 4.6s 3.45s ease infinite;
@@ -189,91 +188,91 @@
 
 @keyframes cssload-dot-colors {
   0% {
-    background-color: $green;
+    background-color: var(--green);
   }
   25% {
-    background-color: $green;
+    background-color: var(--green);
   }
   50% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   75% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   100% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
 }
 
 @-o-keyframes cssload-dot-colors {
   0% {
-    background-color: $green;
+    background-color: var(--green);
   }
   25% {
-    background-color: $green;
+    background-color: var(--green);
   }
   50% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   75% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   100% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
 }
 
 @-ms-keyframes cssload-dot-colors {
   0% {
-    background-color: $green;
+    background-color: var(--green);
   }
   25% {
-    background-color: $green;
+    background-color: var(--green);
   }
   50% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   75% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   100% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
 }
 
 @-webkit-keyframes cssload-dot-colors {
   0% {
-    background-color: $green;
+    background-color: var(--green);
   }
   25% {
-    background-color: $green;
+    background-color: var(--green);
   }
   50% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   75% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   100% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
 }
 
 @-moz-keyframes cssload-dot-colors {
   0% {
-    background-color: $green;
+    background-color: var(--green);
   }
   25% {
-    background-color: $green;
+    background-color: var(--green);
   }
   50% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   75% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
   100% {
-    background-color: $yellow;
+    background-color: var(--yellow);
   }
 }
 
