--- a/src/components/NotFound/style.module.scss
+++ b/src/components/NotFound/style.module.scss
@@ -1,67 +1,66 @@
-@import '../../app/globals.scss';
+@import './../../../src/app/text-styles.scss';
 
 .not-found {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    background-image: url(../../../public/images/notFound/comps.webp);
-    background-repeat: no-repeat;
-    background-position: center top;
-    height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  background-image: url(../../../public/images/notFound/comps.webp);
+  background-repeat: no-repeat;
+  background-position: center top;
+  height: 80vh;
+  width: 100%;
+
+  &__name {
     width: 100%;
-  
-      &__name {
-        width: 100%;
-        font-size: 100px;
-        margin-bottom: 10px;
-      }
-  
-      &__text {
-        margin-top: -20px;
-        margin-bottom: 20px;
-        text-align: center;
-        font-size: 20px;
-      }
-  
-      &__btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: $green;
-        width: 300px;
-        height: 60px;
-        padding: 10px 0 10px 0;
-        border-radius: 30px;
-        border: none;
-        cursor: pointer;
+    font-size: 100px;
+    margin-bottom: 10px;
+  }
 
-        & > a {
-            text-decoration: none;
-            color: $white;
-            font-size: 20px;
-        }
-  
-        &:hover {
-              background-color: $black;
-            }
-  
-            &:active {
-              background-color: $yellow;
-            }
-  
-        &__link {
-          text-decoration: none;
-          color: $white;
-        }
-      }
+  &__text {
+    margin-top: -20px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--green);
+    width: 300px;
+    height: 60px;
+    padding: 10px 0 10px 0;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
+
+    & > a {
+      text-decoration: none;
+      color: var(--white);
+      font-size: 20px;
     }
 
-  
+    &:hover {
+      background-color: var(--black);
+    }
+
+    &:active {
+      background-color: var(--yellow);
+    }
+
+    &__link {
+      text-decoration: none;
+      color: var(--white);
+    }
+  }
+}
+
 @media screen and (max-width: 600px) {
-    .not-found {
-        background-size: contain;
-        background-position: center bottom;
-    }
+  .not-found {
+    background-size: contain;
+    background-position: center bottom;
+  }
 }
