--- a/src/app/services/style.module.scss
+++ b/src/app/services/style.module.scss
@@ -58,8 +58,24 @@
     }
   }
 
-  input,
+  input {
+    width: 70%;
+    border: none;
+    border-bottom: 1px solid #b3b3b3;
+    margin-bottom: 20px;
+    padding: 10px;
+    outline: none;
+    resize: none;
+
+    @extend %text-medium-font;
+
+    &:focus {
+      border-color: var(--green);
+    }
+  }
+
   textarea {
+    min-height: 100px;
     width: 70%;
     border: none;
     border-bottom: 1px solid #b3b3b3;
