--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -3,12 +3,14 @@
 .header {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   position: sticky;
   top: 0;
   background-color: white;
   width: 100%;
   padding: 20px 40px;
   box-sizing: border-box;
+  background-color: #fff;
   @media screen and (max-width: 838px) {
     flex-direction: column;
     align-items: center;
@@ -23,7 +25,6 @@
     padding: 0;
     margin: 25px;
     @extend %header__navbar-font;
-
 
     @media screen and (max-width: 1175px) {
       font-size: 15px;
