на главной странице исправлен текст в перечне услуг, поправлен текст политики, добавлены стили для 6 пункта политики

--- a/src/app/privacy-policy/style.module.scss
+++ b/src/app/privacy-policy/style.module.scss
@@ -51,5 +51,12 @@
         line-height: 131%;
       }
     }
+
+    &_column {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      justify-items: start;
+      text-align: left;
+    }
   }
 }
