en text was added to privacy

--- a/src/components/ArticleServices/style.module.scss
+++ b/src/components/ArticleServices/style.module.scss
@@ -30,6 +30,7 @@
   text-decoration: underline;
   text-decoration-color: var(--green);
   transition: 0.3s ease;
+  padding: 0px;
 
   &:hover {
     text-decoration: underline;
