--- a/src/app/blog/style.module.scss
+++ b/src/app/blog/style.module.scss
@@ -10,6 +10,8 @@
   gap: 5vh;
   color: var(--black);
   width: 100%;
+  box-sizing: border-box;
+  padding: 0px 20px 30px 20px;
 }
 .heading {
   @extend %heading-font;
