--- a/src/components/DescriptionBlog/style.module.scss
+++ b/src/components/DescriptionBlog/style.module.scss
@@ -4,6 +4,7 @@
   @extend %text-font;
   text-indent: 15px;
   word-wrap: break-word;
+  padding-top: 10px;
 }
 .blog__button {
   @extend %text-font;
