добавлена кнопка Вернуться на главную и стили к ней

--- a/src/app/privacy-policy/style.module.scss
+++ b/src/app/privacy-policy/style.module.scss
@@ -59,4 +59,22 @@
       text-align: left;
     }
   }
+
+  &__button {
+    margin-top: 15px;
+    margin-bottom: 50px;
+    background-color: var(--green);
+    border: none;
+    height: 45px;
+    padding: 0 30px;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    @extend %button-font;
+   
+    &:hover {
+      background-color: var(--black);
+    }
+  }
+  
 }
