--- a/src/app/about/imgStyle.scss
+++ b/src/app/about/imgStyle.scss
@@ -1,8 +1,8 @@
-.about__cards_image{
-    width: 616px;
-    height: 387px;
-    @media screen and (max-width: px) {
-      width: 320px;
-      height: 225px;
-    }
+.about__cards_image {
+  width: 616px;
+  height: 387px;
+  @media screen and (max-width: 1075px) {
+    width: 320px;
+    height: 225px;
+  }
 }
